# lox-interpreter

./: CMakeLists.txt  README.md  build.sh  test.lox
include/common/: error_enums.hpp  token.hpp  token_type_enums.hpp
include/scanning/: scanning_utils.hpp
include/utils/: error_handling.hpp
src/: main.cpp  scanning_utils.cpp  scanning_utils.hpp
src/lox_interpreter/: main.cpp
src/lox_interpreter/scanning/: scanning_utils.cpp
src/scanning/: scanning_utils.cpp
src/utils/: error_handling.cpp
